--- a/assets/index.css
+++ b/assets/index.css
@@ -5,63 +5,147 @@ Avalanche maroon #6f253c;
 
 
 @font-face {
-    font-family: "DSEG7-Classic-Regular";
-    src: url(fonts/DSEG7-Classic/DSEG7Classic-Regular.woff);
-    }
+font-family: "DSEG7-Classic-Regular";
+src: url(fonts/DSEG7-Classic/DSEG7Classic-Regular.woff);
+}
+
+@font-face {
+font-family: "DSEG7-Classic-Bold";
+src: url(fonts/DSEG7Classic-Bold.woff);
+}
+
+body {
+    overflow: hidden;
+    background: url(images/concrete_seamless.png);
+    background-attachment: contain;
+    background-attachment: fixed;
+    z-index: -100;
+}
+
+#clockWrapper {
+    position: absolute;
+    display: flexbox;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+h1 {
+    display: block;
+    grid-row-start: auto;
+    color: #2596be;
+    margin: 0 auto;
+    font-family: 'Oxanium', 'Staatliches ', cursive;
+    letter-spacing: 2px;
+    font-size: 60px;
+    text-align: center;
+    letter-spacing: 1px;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+}
+
+#clockContainer {
+    display: flexbox;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    z-index: 12;
+}
+
+.clock {
+    position: relative;
+    display: inline;
+    min-width: 15%;
+    height: auto;
+    top: 5rem;
+    margin: 0 1rem;
+    padding: 10px 15px;
+    left: 30%;
+    background-color: rgba(110, 170, 250, 0.2);
+    color: #6f253c;
+    font-size: 32px;
+    font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
+    text-align: center;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
     
-    @font-face {
-    font-family: "DSEG7-Classic-Bold";
-    src: url(fonts/DSEG7Classic-Bold.woff);
-    }
-    
-    body {
-        overflow: hidden;
-        background: url(concrete_seamless.png);
-        z-index: -1000;
-    }
-    
-    h1 {
-        display: block;
-        color: #2596be;
-        text-align: center;
-        font-size: 48px;
-        letter-spacing: 1px;
-    }
-    
-    span {
+    border: 1px double rgba(110, 170, 250, 0.5);
+    border-right: none;
+    box-shadow: 0 0 5px #143b91;
+    border-radius: 15px;
+    outline: none;
+    z-index: 12;
+}
+
+#logoContainer {
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    top: 5rem;
+    background-image: url(images/avalanche.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    opacity: 20%;
+    z-index: 44;
+    transform: scale(1.1);
+
+} 
+
+#hockeyVector {
+    position: absolute;
+    display: grid;
+    width: 100%;
+    height: 33%;
+    bottom: 0;
+    margin-top: 10rem;
+    background-image: url(images/hockey.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    align-items: center;
+    border-top: 1px solid none;
+    box-shadow: 0 0 5rem rgba(42, 74, 116, 0.6);
+    transform: scale(1.5);
+    overflow: hidden;
+    opacity: 75%;
+    z-index: 6;
+}
+
+#cup {
+    position: absolute;
+    display: block;
+    transform: scale(0.5);
+    opacity: 70%;
+    z-index: 44;
+}
+
+/* @media (min-width: 400px) and (max-width: 992px) {
+    .clock {
         position: relative;
-        display: flex;
-        width: 15rem;
-        height: auto;
-        top: 30vh;
-        justify-content: center;
-        background-color: #2596be;
+        display: grid;
+        grid-row: 1;
+        width: 35%;
+        height: 15%;
+        top: -2rem;
+        background-color: rgba(110, 170, 250, 0.2);
         color: #6f253c;
-        border: 2px solid #2596be;
-        font-size: 64px;
+        font-size: 14px;
         font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
-    }
-    
-    #logoContainer {
-        position: absolute;
-        display: block;
-        width: 100%;
-        height: 60%;
-        top: 10rem;
-        opacity: 80%;
-        z-index: -10;
-        transform: scale(1.1);
-    
-        background-image: url(avalanche.svg);
-        background-attachment: fixed;
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-    
-    #clockContainer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
         text-align: center;
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        
+        border: 2px double #a8e0f5;
+        border-right: 0.5px solid #a8e0f5;
+        box-shadow: 0 0 15px #143b91;
+        outline: none;
+        border-radius: 30px;
+        margin: 2rem;
+        padding: 10px 10px;
+        z-index: 4;
     }
+} */
