--- a/assets/index.css
+++ b/assets/index.css
@@ -18,24 +18,47 @@ body {
 }
 
 #clockWrapper {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
     position: absolute;
-    display: flexbox;
-    height: 100%;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     justify-content: center;
 }
 
 h1 {
-    display: block;
-    color: #2596be;
-    margin: 0 auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-flex-wrap: nowrap;
+    -moz-box-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-flex-direction: row;
+    -moz-box-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -moz-box-flex: 1 0 auto;
+    -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    flex-grow: 0;
+    justify-content: center;
+
+    position: absolute;
+    margin: 1rem;
     font-family: 'Open Sans', 'Helvetica', sans-serif;
-    letter-spacing: 1rem;
-    font-size: 55px;
+    font-size: 48px;
     opacity: 40%;
     text-align: center;
-    letter-spacing: 1px;
+    color: #2596be;
     border: none;
     outline: none;
     -moz-osx-font-smoothing: grayscale;
@@ -43,38 +66,77 @@ h1 {
 }
 
 #clockContainer {
-    display: flexbox;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-flex-direction: row;
+    -moz-box-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
     flex-direction: row;
+    flex: 1 0 auto;
     justify-content: center;
-    margin: 0 auto;
+    position: absolute;
+    margin: 1rem auto;
     z-index: 12;
 }
 
-.clock {
+.clock { 
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-flex-wrap: nowrap;
+    -moz-box-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-flex-direction: row;
+    -moz-box-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -moz-box-flex: 1 0 auto;
+    -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    flex-grow: 0;
+
     position: relative;
-    display: inline;
-    min-width: 15%;
-    height: auto;
-    top: 5rem;
+    top: 7rem;
+    left: 3rem;
+    min-width: 6rem;
+    width: 6rem;
+    height: 4rem;
+    justify-content: center;
+    align-content: center;
     margin: 0 1rem;
-    padding: 10px 15px;
-    left: 30%;
-    background-color: rgba(110, 170, 250, 0.1);
-    color: #720000;
-    font-size: 32px;
+    padding: 10px 20px;
+    line-height: 4rem;
+    font-size: 48px;
     font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
     text-align: center;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    
+    background-color: rgba(110, 170, 250, 0.1);
+    color: #720000;
     border: 1px solid rgba(110, 170, 250, 0.5);
+    border-bottom: 2px solid rgba(110, 170, 250, 0.5);
     box-shadow: 0 0 2px #143b91;
-    border-radius: 5px;
+    border-radius: 3px;
     outline: none;
     z-index: 12;
 }
 
 .labels {
-    display: flexbox;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
     position: relative;
     min-width: 15%;
     height: auto;
@@ -127,11 +189,31 @@ h1 {
 } 
 
 #hockeyVector {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-flex-wrap: nowrap;
+    -moz-box-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-flex-direction: row;
+    -moz-box-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -moz-box-flex: 1 0 auto;
+    -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    flex-grow: 0;
+    justify-content: center;
+
     position: absolute;
-    display: grid;
-    width: 100%;
     height: 33%;
-    bottom: 3%;
+    width: 100%;
+    bottom: 0.5rem;
     margin-top: 10rem;
     background-image: url(images/hockey.webp);
     background-size: cover;
@@ -156,29 +238,50 @@ h1 {
     z-index: 44;
 }
 
-/* @media (min-width: 400px) and (max-width: 992px) {
-    .clock {
-        position: relative;
-        display: grid;
-        grid-row: 1;
-        width: 35%;
-        height: 15%;
-        top: -2rem;
-        background-color: rgba(110, 170, 250, 0.2);
-        color: #6f253c;
-        font-size: 14px;
-        font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
-        text-align: center;
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        
-        border: 2px double #a8e0f5;
-        border-right: 0.5px solid #a8e0f5;
-        box-shadow: 0 0 15px #143b91;
-        outline: none;
-        border-radius: 30px;
-        margin: 2rem;
-        padding: 10px 10px;
-        z-index: 4;
+
+/* tablets / landscape mode? */
+@media (min-width: 400px) and (max-width: 1281px) {
+
+    h1 {
+        margin: 0 auto;
+        font-size: 24px;
     }
-} */
+
+    .clock { 
+        top: 2rem;
+        left: 3rem;
+        height: 1rem;
+        min-width: 3rem;
+        width: 3rem;
+        margin: 0 1rem;
+        padding: 10px 20px;
+        line-height: 1rem;
+        font-size: 18px;
+    }}
+
+/* mobile screens */
+@media (min-width: 320px) and (max-width: 961px) {
+
+    h1 {
+        margin: 0 auto;
+        font-size: 18px;
+    }
+
+
+    .clock { 
+        top: 1.5rem;
+        left: 2rem;
+        height: 1rem;
+        min-width: 1rem;
+        width: 1rem;
+        margin: 0 0.5rem;
+        padding: 10px 20px;
+        line-height: 1rem;
+        font-size: 18px;
+    }
+
+    #logoContainer {
+        top: 2rem;
+        right: 0.5rem;
+    }
+}
