--- a/assets/index.css
+++ b/assets/index.css
@@ -127,8 +127,6 @@ h1 {
     z-index: 12;
 }
 
-
-/*
 .labels {
     display: -webkit-box;
     display: -moz-box;
@@ -168,8 +166,6 @@ h1 {
 #labelSeconds {
     left: 29.5rem;
 }
-
-*/
 
 #logoContainer {
     position: absolute;
@@ -212,7 +208,7 @@ h1 {
     position: absolute;
     min-width: 100%;
     height: 33%;
-    bottom: 0.5rem;
+    bottom: 0;
     margin-top: 10rem;
     background-image: url(images/hockey.webp);
     background-size: cover;
@@ -223,7 +219,7 @@ h1 {
     border-top: 1px solid none;
     box-shadow: inset 0 0 15rem rgba(42, 74, 116, 0.5);
     box-shadow: outset 0 0 5rem rgba(42, 74, 116, 0.5);
-    transform: scale(1.5);
+    transform: scale(1.2);
     overflow: hidden;
     opacity: 90%;
     z-index: 6;
@@ -260,7 +256,7 @@ h1 {
 }
 
 /* mobile */
-@media (min-width: 320px) and (max-width: 961px) {
+@media only screen and (min-width: 320px) and (max-width: 641px) {
 
     h1 {
         margin: 0 auto;
@@ -282,6 +278,10 @@ h1 {
     #logoContainer {
         top: 2rem;
         right: 0.5rem;
+    }
+
+    #hockeyVector {
+        transform: scale(0.7);
     }
 
 }
