--- a/assets/index.css
+++ b/assets/index.css
@@ -3,6 +3,10 @@ Avalanche blue #2596be;
 Avalanche maroon #6f253c;
 */
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 @font-face {
 font-family: "DSEG7-Classic-Bold";
@@ -10,10 +14,13 @@ src: url(fonts/DSEG7Classic-Bold.woff);
 }
 
 body {
+    width: 100vw; 
+    min-height: 100vh;
     overflow: hidden;
     background: url(images/concrete_seamless.png);
-    background-attachment: contain;
+    background-size: contain;
     background-attachment: fixed;
+    margin: 0;
     z-index: -100;
 }
 
@@ -24,41 +31,22 @@ body {
     display: -webkit-flex;
     display: flex;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    min-height: 100vh;
     margin: 0 auto;
     justify-content: center;
 }
 
 h1 {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-flex-wrap: nowrap;
-    -moz-box-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-flex-direction: row;
-    -moz-box-flex-direction: row;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -moz-box-flex: 1 0 auto;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    flex-grow: 0;
-    justify-content: center;
-
     position: absolute;
-    margin: 1rem;
-    font-family: 'Open Sans', 'Helvetica', sans-serif;
-    font-size: 48px;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    font-family: 'Bungee', 'Open Sans', 'Helvetica', sans-serif;
+    font-size: 88px;
     opacity: 80%;
     text-align: center;
-    color: #2596be;
+    letter-spacing: 0.3rem;
+    color: #720000;
     border: none;
     outline: none;
     -moz-osx-font-smoothing: grayscale;
@@ -80,7 +68,7 @@ h1 {
     justify-content: center;
     align-items: center;
     position: absolute;
-    margin: 10% auto;
+    margin-top: 12%;
     z-index: 12;
 }
 
@@ -109,10 +97,10 @@ h1 {
     width: 6rem;
     height: 4rem;
     line-height: 4rem;
-    margin: 0 1rem;
-    padding: 10px 20px;
-    font-size: 48px;
+    margin: 0 3rem;
+    padding: 7% 14%;
     font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
+    font-size: 112px;
     text-align: center;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -120,7 +108,7 @@ h1 {
     background-color: rgba(110, 170, 250, 0.1);
     color: #720000;
     border: 1px solid rgba(110, 170, 250, 0.5);
-    border-bottom: 2px solid rgba(110, 170, 250, 0.5);
+    border-bottom: 1px solid rgba(110, 170, 250, 0.5);
     box-shadow: 0 0 2px #143b91;
     border-radius: 3px;
     outline: none;
@@ -151,39 +139,30 @@ h1 {
     box-shadow: none;
 }
 
-#labelDays {
-    left: 27.5rem;
-}
-
-#labelHours {
-    left: 28.5rem;
-}
-
-#labelMinutes {
-    left: 29rem;
-}
-
-#labelSeconds {
-    left: 29.5rem;
-}
-
 #logoContainer {
     position: absolute;
     width: 100%;
     height: 30%;
-    top: 5rem;
+    top: 20%;
     background-image: url(images/avalanche.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    opacity: 20%;
+    opacity: 15%;
     z-index: -4;
     transform: scale(1.1);
-
 } 
 
-#hockeyVector {
+#hockeyContainer {
+    position: absolute;
+    min-width: 100%;
+    min-height: 40%;
+    bottom: 0;
+}
+
+#hockeyVector{
+    position: absolute;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -207,81 +186,100 @@ h1 {
 
     position: absolute;
     min-width: 100%;
-    height: 33%;
-    bottom: 0;
-    margin-top: 10rem;
-    background-image: url(images/hockey.webp);
-    background-size: cover;
+    min-height: 100%;
+    margin-bottom: 0;
+    background-image: url(images/hockeyImage.svg);
+    background-size: contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    align-items: center;
+    background-position-y: 5rem;
     border-top: 1px solid none;
     box-shadow: inset 0 0 15rem rgba(42, 74, 116, 0.5);
     box-shadow: outset 0 0 5rem rgba(42, 74, 116, 0.5);
-    transform: scale(1.2);
-    overflow: hidden;
-    opacity: 90%;
+    opacity: 80%;
     z-index: 6;
-}
+} 
 
 #cup {
     position: absolute;
     display: block;
-    transform: scale(0.5);
+    top: 45vh;
+    left: 33vw;
+    padding: auto;
+    transform: scale(0.9);
     opacity: 70%;
     z-index: 44;
 }
 
+#labelDays {
+    left: 27.5rem;
+}
+
+#labelHours {
+    left: 28.5rem;
+}
+
+#labelMinutes {
+    left: 29rem;
+}
+
+#labelSeconds {
+    left: 29.5rem;
+}
 
 /* tablets / low res desktop */
 @media (min-width: 400px) and (max-width: 1025px) {
-
     h1 {
-        margin: 0 auto;
+        margin: 1.5rem auto;
         font-size: 24px;
     }
-
     .clock { 
-        top: 2rem;
+        top: 15rem;
         left: 3rem;
         min-width: 3rem;
         max-width: 3rem;
         height: 1rem;
         margin: 0 1rem;
-        padding: 10px 20px;
+        padding: 12px 20px;
         line-height: 1rem;
-        font-size: 18px;
+        font-size: 20px;
+    }
+    #clockContainer {
+        padding-top: 5rem;
+    }
+    #hockeyVector {
+        background-image: url(images/hockey.svg);
+        background-position-y: 10rem;
     }
 }
 
 /* mobile */
-@media only screen and (min-width: 320px) and (max-width: 641px) {
+@media only screen and (min-width: 300px) and (max-width: 641px) {
 
     h1 {
-        margin: 0 auto;
-        font-size: 18px;
+        margin: 1.5rem auto;
+        font-size: 32px;
     }
-
+    #clockContainer {
+        padding-top: 15rem;
+    }
     .clock { 
         top: 1.5rem;
         left: 2rem;
         min-width: 1rem;
         width: 1rem;
         height: 1rem;
-        margin: 0 1rem;
-        padding: 10px 20px;
+        margin-top: 5rem;
+        padding: 12px 20px;
         line-height: 1rem;
-        font-size: 18px;
+        font-size: 20px;
     }
-
     #logoContainer {
-        top: 2rem;
+        top: 3rem;
         right: 0.5rem;
     }
-
     #hockeyVector {
-        transform: scale(0.7);
+        background-image: url(images/hockeyImage.svg);
     }
-
 }
