--- a/assets/index.css
+++ b/assets/index.css
@@ -3,14 +3,14 @@ Avalanche blue #2596be;
 Avalanche maroon #6f253c;
 */
 
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+@font-face {
+    font-family: "DSEG7-Classic-Bold";
+    src: url(fonts/DSEG7Classic-Bold.woff);
 }
 
-@font-face {
-font-family: "DSEG7-Classic-Bold";
-src: url(fonts/DSEG7Classic-Bold.woff);
+html, body {
+    max-width: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -41,12 +41,13 @@ body {
 h1 {
     position: absolute;
     margin-top: 3rem;
+    margin-bottom: 1rem;
     font-family: 'Bungee', 'Open Sans', 'Helvetica', sans-serif;
     font-size: 64px;
     opacity: 80%;
     text-align: center;
     letter-spacing: 0.3rem;
-    color: #720000;
+    color: #5d1d31;
     border: none;
     outline: none;
     -moz-osx-font-smoothing: grayscale;
@@ -54,48 +55,20 @@ h1 {
 }
 
 #clockContainer {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-flex-direction: row;
-    -moz-box-flex-direction: row;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    flex: 1 0 auto;
+    position: relative;
     justify-content: center;
-    align-items: center;
-    position: absolute;
-    margin-top: 12%;
+    margin-top: 15rem;
+    margin-bottom: 1rem;
+    white-space: nowrap;
     z-index: 12;
 }
 
-.clock { 
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-flex-wrap: nowrap;
-    -moz-box-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-flex-direction: row;
-    -moz-box-flex-direction: row;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -moz-box-flex: 1 0 auto;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    flex-grow: 0;
-    justify-content: center;
-
+.clock {
+    width: 100%;
+    height: 50%;
+    top: 28%;
     min-width: 6rem;
-    width: 6rem;
+    max-width: 6rem;
     height: 4rem;
     line-height: 4rem;
     margin: 0 3rem;
@@ -106,54 +79,30 @@ h1 {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     background-color: rgba(110, 170, 250, 0.1);
-    color: #720000;
+    color: #5d1d31;
     border: 1px solid rgba(110, 170, 250, 0.5);
     border-bottom: 1px solid rgba(110, 170, 250, 0.5);
-    box-shadow: 0 0 2px #143b91;
-    border-radius: 3px;
+    box-shadow: 0 0 1px #143b91;
+    border-radius: 5px 35px;
     outline: none;
     z-index: 12;
-}
-
-.labels {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    position: relative;
-    min-width: 15%;
-    height: auto;
-    top: 5rem;
-    margin-right: 3rem;
-    padding: 0;
-    color: rgb(0, 0, 0);
-    font-size: 12px;
-    font-family: monospace;
-    text-align: center;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    background-color: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
 }
 
 #logoContainer {
     position: absolute;
     width: 100%;
-    height: 50%;
-    top: 2rem;
+    height: 60%;
+    top: 0;
     background-image: url(images/avalanche.svg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin: 0;
-    opacity: 15%;
+    margin: 0 auto;
+    opacity: 20%;
     z-index: -12;
 } 
 
-#hockeyContainer {
+#bottomContainer {
     position: absolute;
     min-width: 100%;
     min-height: 40%;
@@ -162,121 +111,48 @@ h1 {
     z-index: 6;
 }
 
-#hockeyVector{
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-flex-wrap: nowrap;
-    -moz-box-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-flex-direction: row;
-    -moz-box-flex-direction: row;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -moz-box-flex: 1 0 auto;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    flex-grow: 0;
-    justify-content: center;
-
+#shadow {
     position: absolute;
     min-width: 100%;
     min-height: 100%;
     margin-bottom: 0;
-    background-image: url(images/hockeyImage.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-position-y: 5rem;
     border-top: 1px solid none;
-    box-shadow: inset 0 0 15rem rgba(42, 74, 116, 0.5);
-    box-shadow: outset 0 0 5rem rgba(42, 74, 116, 0.5);
+    box-shadow: inset 0 0 15rem rgba(42, 74, 116, 0.3);
+    box-shadow: outset 0 0 5rem rgba(42, 74, 116, 0.3);
     opacity: 80%;
     z-index: 6;
 } 
 
+/* 
 #cup {
     position: absolute;
-    display: block;
-    top: 45vh;
-    left: 33vw;
+    margin: 0 auto;
+    right: 60%;
     padding: auto;
-    transform: scale(0.9);
-    opacity: 70%;
+    transform: scale(0.2);
+    opacity: 30%;
     z-index: 44;
-}
+} 
+*/
 
-#labelDays {
-    left: 27.5rem;
-}
 
-#labelHours {
-    left: 28.5rem;
-}
-
-#labelMinutes {
-    left: 29rem;
-}
-
-#labelSeconds {
-    left: 29.5rem;
-}
-
-/* tablets / low res desktop */
-@media (min-width: 400px) and (max-width: 1025px) {
+@media (min-width: 300px) and (max-width: 1025px) {
     h1 {
-        margin: 1.5rem auto;
-        font-size: 24px;
+        margin: 3rem auto;
+        font-size: 22px;
+    }
+    #clockContainer {
+        margin-top: 10rem;
+        margin-bottom: 1rem;
     }
     .clock { 
-        top: 15rem;
-        left: 3rem;
         min-width: 3rem;
         max-width: 3rem;
         height: 1rem;
-        margin: 0 1rem;
+        margin: 0 0.5rem;
         padding: 12px 20px;
+        border-radius: 5px 15px;
         line-height: 1rem;
         font-size: 20px;
     }
-    #clockContainer {
-        padding-top: 5rem;
-    }
-    #hockeyVector {
-        background-image: url(images/hockey.svg);
-        background-position-y: 10rem;
-    }
-}
-
-/* mobile */
-@media only screen and (min-width: 300px) and (max-width: 641px) {
-
-    h1 {
-        margin: 1.5rem auto;
-        font-size: 32px;
-    }
-    #clockContainer {
-        padding-top: 15rem;
-    }
-    .clock { 
-        top: 1.5rem;
-        left: 2rem;
-        min-width: 1rem;
-        width: 1rem;
-        height: 1rem;
-        margin-top: 5rem;
-        padding: 12px 20px;
-        line-height: 1rem;
-        font-size: 20px;
-    }
-    /* #logoContainer {
-        top: 3rem;
-        right: 0.5rem;
-    } */
 }
