--- a/assets/index.css
+++ b/assets/index.css
@@ -42,7 +42,7 @@ h1 {
     position: absolute;
     margin-top: 3rem;
     margin-bottom: 1rem;
-    font-family: 'Bungee', 'Open Sans', 'Helvetica', sans-serif;
+    font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
     font-size: 64px;
     opacity: 80%;
     text-align: center;
@@ -68,7 +68,7 @@ h1 {
     height: 50%;
     top: 28%;
     min-width: 6rem;
-    max-width: 6rem;
+    max-width: 5rem;
     height: 4rem;
     line-height: 4rem;
     margin: 0 3rem;
@@ -78,7 +78,7 @@ h1 {
     text-align: center;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    background-color: rgba(110, 170, 250, 0.1);
+    background-color: rgba(110, 170, 250, 0.2);
     color: #5d1d31;
     border: 1px solid rgba(110, 170, 250, 0.5);
     border-bottom: 1px solid rgba(110, 170, 250, 0.5);
@@ -86,6 +86,25 @@ h1 {
     border-radius: 5px 35px;
     outline: none;
     z-index: 12;
+}
+
+.colon {
+    position: relative;
+    color:#5d1d31;
+    font-size: 88px;
+    opacity: 80%;
+}
+
+#lastColon {
+    animation: flash 2s linear infinite;
+}
+
+@keyframes flash {
+    25% { opacity: 0; }
+
+    50% { opacity: 0; }
+
+    100% { opacity: 80%; }
 }
 
 #logoContainer {
@@ -100,7 +119,7 @@ h1 {
     margin: 0 auto;
     opacity: 20%;
     z-index: -12;
-} 
+}
 
 #bottomContainer {
     position: absolute;
@@ -109,6 +128,7 @@ h1 {
     bottom: 0;
     background-color:rgba(110, 170, 250, 0.1);
     z-index: 6;
+    overflow-y: hidden;
 }
 
 #shadow {
@@ -144,6 +164,8 @@ h1 {
     #clockContainer {
         margin-top: 10rem;
         margin-bottom: 1rem;
+        margin-left: 3%;
+        margin-right: 3%;
     }
     .clock { 
         min-width: 3rem;
@@ -154,5 +176,8 @@ h1 {
         border-radius: 5px 15px;
         line-height: 1rem;
         font-size: 20px;
+    }
+    .colon {
+        font-size: 48px;
     }
 }
