--- a/assets/index.css
+++ b/assets/index.css
@@ -156,16 +156,16 @@ h1 {
 */
 
 
-@media (min-width: 300px) and (max-width: 1025px) {
+@media only screen and (max-width: 992px) {
     h1 {
         margin: 3rem auto;
-        font-size: 22px;
+        font-size: 16px;
     }
     #clockContainer {
         margin-top: 10rem;
         margin-bottom: 1rem;
-        margin-left: 3%;
-        margin-right: 3%;
+        padding-left: 3%;
+        padding-right: 3%;
     }
     .clock { 
         min-width: 3rem;
