--- a/assets/index.css
+++ b/assets/index.css
@@ -144,6 +144,8 @@ h1 {
     margin-top: 7rem;
     margin-right: 15rem;
     margin-bottom: 3rem;
+    filter: drop-shadow(0 0 1px rgba(134, 134, 134, 0.8));
+    transform: scale(1.3);
     z-index: 12;
 }
 
