--- a/assets/index.css
+++ b/assets/index.css
@@ -18,10 +18,10 @@ html, body {
 body {
     width: 100%; 
     min-height: 100%;
-    overflow: hidden;
     background: url(images/concrete_seamless.png);
     background-size: contain;
     background-attachment: fixed;
+    padding: 0;
     margin: 0;
     z-index: -100;
 }
@@ -34,7 +34,7 @@ body {
     display: flex;
     position: absolute;
     min-width: 100%;
-    min-height: 100%;
+    height: 100%;
     justify-content: center;
     margin: 0 auto;
     overflow: hidden;
@@ -130,10 +130,9 @@ h1 {
 .bottomContainer {
     position: absolute;
     width: 100%;
-    height: 40%;
+    min-height: 40%;
     bottom: 0;
     left: 0;
-    right: 0;
     background-color:rgba(110, 170, 250, 0.2);
     overflow-y: hidden;
     z-index: -12;
@@ -208,11 +207,11 @@ h1 {
         min-width: 5rem;
         max-width: 5rem;
         height: 2rem;
+        line-height: 2rem;
         margin: 0 auto;
         padding: 3px 21px;
         border-radius: 2px 14px;
         font-size: 28px;
-        line-height: 28px;
     }
     #goal {
         margin-top: 5rem;
