eliminating white space in portrait mode on mobile, test  #2

--- a/assets/index.css
+++ b/assets/index.css
@@ -11,11 +11,9 @@ html, body {
 }
 
 body {
-    overflow: hidden;
     background: url(images/concrete_seamless.png);
     background-size: contain;
     background-attachment: fixed;
-    margin: 0;
 }
 
 @font-face {
@@ -62,10 +60,11 @@ h1 {
     display: -webkit-flex;
     display: flex;
     justify-content: center;
+    text-align: center;
     margin-top: 15rem;
     margin-bottom: 1rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     z-index: 12;
 }
 
@@ -75,11 +74,12 @@ h1 {
     top: 28%;
     height: 4rem;
     line-height: 4rem;
-    margin: 0 2.5rem;
+    margin: 0 2rem;
     padding: 2rem 4rem;
     font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
-    font-size: 72px;
+    font-size: 68px;
     text-align: center;
+    text-align: left;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     background-color: rgba(110, 170, 250, 0.2);
@@ -90,6 +90,10 @@ h1 {
     border-radius: 5px 35px;
     outline: none;
     z-index: 12;
+}
+
+#days {
+    padding-right: 8rem;
 }
 
 .colon {
@@ -164,7 +168,6 @@ h1 {
         font-size: 26px;
     }
     .clockContainer {
-        margin-top: 13rem;
         margin-left: 1rem;
         margin-right: 1rem;
     }
@@ -174,10 +177,13 @@ h1 {
         height: 1rem;
         line-height: 1rem;
         margin: 0 auto;
-        padding: 8px 14px;
+        padding: 8px 12px;
         border-radius: 2px 14px;
         font-size: 24px;
         justify-content: center;
+    }
+    #days {
+        padding-right: 16px;
     }
     .colon {
         font-size: 38px;
