--- a/assets/index.css
+++ b/assets/index.css
@@ -4,7 +4,7 @@ Avalanche blue #2596be;
 
 html, body {
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
