testing bottom container height raised to 60% on mobile with a margin of 60% to match logo container, with overflow-y hidden. extended mobile animation length to intersect w/goal

--- a/assets/index.css
+++ b/assets/index.css
@@ -182,7 +182,9 @@ h1 {
         line-height: 2rem;
     }
     .bottomContainer {
-        bottom: 0;
+        height: 60%;
+        margin-top: 60%;
+        overflow-y: hidden;
     }
     #days {
         padding-right: 18px;
